Add demo pages per plugin and an interactive VSCode-style TUI for cli-plugin
Plugin-specific Thymeleaf pages (/pages/ado, /pages/actuator, /pages/cli)
exercise each plugin's own API, plus /pages/overview combines base +
multiple plugins; each plugin contributes its own page controller/template
so removing the jar removes the page along with the rest of the plugin.

cli-plugin's FireflyCommand now renders a full menubar/toolbar/explorer/
preview/status/output TUI with real mouse and keyboard interactivity
(click-to-focus, click-to-select, scroll, Alt-mnemonic menus, live search
filter, theme toggle) instead of a static placeholder screen. Also fixes
the web terminal swallowing Tab (browser was stealing focus before xterm.js
saw it) and suppresses the JLine native-access warnings.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>